--- a/public/css/index.css
+++ b/public/css/index.css
@@ -574,6 +574,50 @@ video {
 	--tw-ring-shadow: 0 0 #0000;
 	--tw-shadow: 0 0 #0000;
 }
+.container {
+	width: 100%;
+}
+@media (min-width: 640px) {
+
+	.container {
+		max-width: 640px;
+	}
+}
+@media (min-width: 768px) {
+
+	.container {
+		max-width: 768px;
+	}
+}
+@media (min-width: 1024px) {
+
+	.container {
+		max-width: 1024px;
+	}
+}
+@media (min-width: 1280px) {
+
+	.container {
+		max-width: 1280px;
+	}
+}
+@media (min-width: 1536px) {
+
+	.container {
+		max-width: 1536px;
+	}
+}
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
+}
 .fixed {
 	position: fixed;
 }
@@ -589,38 +633,32 @@ video {
 .left-\[18px\] {
 	left: 18px;
 }
+.top-\[0\] {
+	top: 0;
+}
 .top-0 {
 	top: 0px;
 }
 .z-10 {
 	z-index: 10;
 }
-.mt-\[2vw\] {
-	margin-top: 2vw;
+.ml-1 {
+	margin-left: 0.25rem;
 }
-.ml-\[2vw\] {
-	margin-left: 2vw;
-}
-.mr-3 {
-	margin-right: 0.75rem;
-}
-.mb-2 {
-	margin-bottom: 0.5rem;
+.mt-1 {
+	margin-top: 0.25rem;
 }
 .mr-1 {
 	margin-right: 0.25rem;
 }
-.ml-1 {
-	margin-left: 0.25rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
 }
 .ml-2 {
 	margin-left: 0.5rem;
-}
-.mt-1 {
-	margin-top: 0.25rem;
 }
 .mb-3 {
 	margin-bottom: 0.75rem;
@@ -637,8 +675,8 @@ video {
 .mb-1 {
 	margin-bottom: 0.25rem;
 }
-.ml-40 {
-	margin-left: 10rem;
+.ml-10 {
+	margin-left: 2.5rem;
 }
 .mt-\[600px\] {
 	margin-top: 600px;
@@ -652,8 +690,11 @@ video {
 .ml-14 {
 	margin-left: 3.5rem;
 }
-.ml-10 {
-	margin-left: 2.5rem;
+.mt-5 {
+	margin-top: 1.25rem;
+}
+.mt-4 {
+	margin-top: 1rem;
 }
 .mt-20 {
 	margin-top: 5rem;
@@ -664,20 +705,17 @@ video {
 .ml-4 {
 	margin-left: 1rem;
 }
-.mt-4 {
-	margin-top: 1rem;
-}
 .mt-28 {
 	margin-top: 7rem;
+}
+.block {
+	display: block;
 }
 .flex {
 	display: flex;
 }
-.h-\[10vw\] {
-	height: 10vw;
-}
-.h-\[3vw\] {
-	height: 3vw;
+.hidden {
+	display: none;
 }
 .h-\[30px\] {
 	height: 30px;
@@ -693,6 +731,9 @@ video {
 }
 .h-\[80px\] {
 	height: 80px;
+}
+.h-\[100px\] {
+	height: 100px;
 }
 .h-\[950px\] {
 	height: 950px;
@@ -715,23 +756,23 @@ video {
 .h-\[790px\] {
 	height: 790px;
 }
+.h-\[300px\] {
+	height: 300px;
+}
+.h-\[200px\] {
+	height: 200px;
+}
 .h-80 {
 	height: 20rem;
 }
 .h-48 {
 	height: 12rem;
 }
-.w-\[10vw\] {
-	width: 10vw;
+.h-96 {
+	height: 24rem;
 }
-.w-\[60vw\] {
-	width: 60vw;
-}
-.w-\[3vw\] {
-	width: 3vw;
-}
-.w-\[70vw\] {
-	width: 70vw;
+.w-\[25px\] {
+	width: 25px;
 }
 .w-\[30px\] {
 	width: 30px;
@@ -754,8 +795,8 @@ video {
 .w-\[100px\] {
 	width: 100px;
 }
-.w-\[20px\] {
-	width: 20px;
+.w-\[700px\] {
+	width: 700px;
 }
 .w-full {
 	width: 100%;
@@ -784,8 +825,11 @@ video {
 .w-\[208px\] {
 	width: 208px;
 }
-.w-7 {
-	width: 1.75rem;
+.w-\[1130px\] {
+	width: 1130px;
+}
+.w-\[150px\] {
+	width: 150px;
 }
 .w-80 {
 	width: 20rem;
@@ -793,11 +837,20 @@ video {
 .w-16 {
 	width: 4rem;
 }
+.w-7 {
+	width: 1.75rem;
+}
 .w-\[1200px\] {
 	width: 1200px;
 }
 .w-\[1000px\] {
 	width: 1000px;
+}
+.w-36 {
+	width: 9rem;
+}
+.w-\[308px\] {
+	width: 308px;
 }
 .w-\[960px\] {
 	width: 960px;
@@ -810,6 +863,24 @@ video {
 }
 .w-\[550px\] {
 	width: 550px;
+}
+.w-\[500px\] {
+	width: 500px;
+}
+.w-96 {
+	width: 24rem;
+}
+.w-\[130px\] {
+	width: 130px;
+}
+.w-\[200px\] {
+	width: 200px;
+}
+.w-4 {
+	width: 1rem;
+}
+.w-20 {
+	width: 5rem;
 }
 .min-w-\[208px\] {
 	min-width: 208px;
@@ -828,9 +899,6 @@ video {
 }
 .max-w-\[380px\] {
 	max-width: 380px;
-}
-.max-w-\[200px\] {
-	max-width: 200px;
 }
 @-webkit-keyframes bounce {
 
@@ -897,32 +965,35 @@ video {
 .overflow-y-scroll {
 	overflow-y: scroll;
 }
-.rounded-full {
-	border-radius: 9999px;
-}
-.rounded-\[3vw\] {
-	border-radius: 3vw;
-}
-.rounded-\[300px\] {
-	border-radius: 300px;
-}
-.rounded-3xl {
-	border-radius: 1.5rem;
+.rounded-\[18px\] {
+	border-radius: 18px;
 }
 .rounded-lg {
 	border-radius: 0.5rem;
 }
+.rounded-3xl {
+	border-radius: 1.5rem;
+}
+.rounded-\[300px\] {
+	border-radius: 300px;
+}
 .rounded-md {
 	border-radius: 0.375rem;
+}
+.rounded-2xl {
+	border-radius: 1rem;
+}
+.rounded-full {
+	border-radius: 9999px;
 }
 .rounded-xl {
 	border-radius: 0.75rem;
 }
-.rounded-\[18px\] {
-	border-radius: 18px;
+.rounded-\[15px\] {
+	border-radius: 15px;
 }
-.rounded-2xl {
-	border-radius: 1rem;
+.rounded-sm {
+	border-radius: 0.125rem;
 }
 .rounded-tl-3xl {
 	border-top-left-radius: 1.5rem;
@@ -953,29 +1024,29 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
-.border-black {
-	--tw-border-opacity: 1;
-	border-color: rgba(0, 0, 0, var(--tw-border-opacity));
-}
-.bg-gray-200 {
+.bg-gray-50 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.bg-\[\#c7c7c7\] {
+.bg-purple-100 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(199, 199, 199, var(--tw-bg-opacity));
-}
-.bg-purple-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
+	background-color: rgba(237, 233, 254, var(--tw-bg-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
-.bg-purple-100 {
+.bg-\[\#74DF00\] {
 	--tw-bg-opacity: 1;
-	background-color: rgba(237, 233, 254, var(--tw-bg-opacity));
+	background-color: rgba(116, 223, 0, var(--tw-bg-opacity));
+}
+.bg-purple-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
+}
+.bg-gray-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 .bg-gray-100 {
 	--tw-bg-opacity: 1;
@@ -984,10 +1055,6 @@ video {
 .bg-purple-300 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
-}
-.bg-gray-50 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
 .bg-green-500 {
 	--tw-bg-opacity: 1;
@@ -1041,6 +1108,9 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(242, 239, 235, var(--tw-bg-opacity));
 }
+.bg-opacity-40 {
+	--tw-bg-opacity: 0.4;
+}
 .bg-opacity-80 {
 	--tw-bg-opacity: 0.8;
 }
@@ -1049,12 +1119,6 @@ video {
 }
 .bg-opacity-60 {
 	--tw-bg-opacity: 0.6;
-}
-.bg-opacity-40 {
-	--tw-bg-opacity: 0.4;
-}
-.bg-opacity-70 {
-	--tw-bg-opacity: 0.7;
 }
 .bg-gradient-to-b {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -1069,11 +1133,11 @@ video {
 .to-pink-100 {
 	--tw-gradient-to: #fce7f3;
 }
-.p-4 {
-	padding: 1rem;
-}
 .p-2 {
 	padding: 0.5rem;
+}
+.p-4 {
+	padding: 1rem;
 }
 .p-28 {
 	padding: 7rem;
@@ -1084,14 +1148,11 @@ video {
 .p-3 {
 	padding: 0.75rem;
 }
-.pt-\[2vw\] {
-	padding-top: 2vw;
+.pl-1 {
+	padding-left: 0.25rem;
 }
-.pl-\[2vw\] {
-	padding-left: 2vw;
-}
-.pb-\[2vw\] {
-	padding-bottom: 2vw;
+.pt-3 {
+	padding-top: 0.75rem;
 }
 .pl-\[15px\] {
 	padding-left: 15px;
@@ -1117,8 +1178,17 @@ video {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
-.pl-1 {
-	padding-left: 0.25rem;
+.pl-36 {
+	padding-left: 9rem;
+}
+.pb-5 {
+	padding-bottom: 1.25rem;
+}
+.pt-14 {
+	padding-top: 3.5rem;
+}
+.pt-4 {
+	padding-top: 1rem;
 }
 .pl-\[5px\] {
 	padding-left: 5px;
@@ -1132,21 +1202,6 @@ video {
 .pb-\[6px\] {
 	padding-bottom: 6px;
 }
-.pt-3 {
-	padding-top: 0.75rem;
-}
-.pl-36 {
-	padding-left: 9rem;
-}
-.pb-5 {
-	padding-bottom: 1.25rem;
-}
-.pt-14 {
-	padding-top: 3.5rem;
-}
-.pt-4 {
-	padding-top: 1rem;
-}
 .pb-2 {
 	padding-bottom: 0.5rem;
 }
@@ -1159,34 +1214,34 @@ video {
 .text-center {
 	text-align: center;
 }
-.font-neom {
-	font-family: NeoM;
-}
 .font-neob {
 	font-family: NeoB;
+}
+.font-neom {
+	font-family: NeoM;
 }
 .font-neor {
 	font-family: NeoR;
 }
-.font-neoeb {
-	font-family: NeoEB;
-}
 .font-neosb {
 	font-family: NeoSB;
 }
-.font-neol {
-	font-family: NeoL;
+.font-neoeb {
+	font-family: NeoEB;
 }
-.text-\[2\.8vw\] {
-	font-size: 2.8vw;
-}
-.text-lg {
-	font-size: 1.125rem;
-	line-height: 1.75rem;
+.text-\[12px\] {
+	font-size: 12px;
 }
 .text-sm {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
+}
+.text-\[10px\] {
+	font-size: 10px;
+}
+.text-lg {
+	font-size: 1.125rem;
+	line-height: 1.75rem;
 }
 .text-xs {
 	font-size: 0.75rem;
@@ -1194,12 +1249,6 @@ video {
 }
 .text-\[15px\] {
 	font-size: 15px;
-}
-.text-\[12px\] {
-	font-size: 12px;
-}
-.text-\[10px\] {
-	font-size: 10px;
 }
 .text-\[28px\] {
 	font-size: 28px;
@@ -1219,11 +1268,18 @@ video {
 	font-size: 1rem;
 	line-height: 1.5rem;
 }
+.text-\[20px\] {
+	font-size: 20px;
+}
 .text-\[50px\] {
 	font-size: 50px;
 }
 .text-\[33px\] {
 	font-size: 33px;
+}
+.text-gray-700 {
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 .text-\[\#a7a7aa\] {
 	--tw-text-opacity: 1;
@@ -1232,10 +1288,6 @@ video {
 .text-\[\#c086c5\] {
 	--tw-text-opacity: 1;
 	color: rgba(192, 134, 197, var(--tw-text-opacity));
-}
-.text-gray-700 {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 .text-purple-800 {
 	--tw-text-opacity: 1;
@@ -1259,13 +1311,6 @@ video {
 }
 .text-transparent {
 	color: transparent;
-}
-.text-gray-100 {
-	--tw-text-opacity: 1;
-	color: rgba(243, 244, 246, var(--tw-text-opacity));
-}
-.opacity-25 {
-	opacity: 0.25;
 }
 .opacity-20 {
 	opacity: 0.2;
