--- a/public/css/index.css
+++ b/public/css/index.css
@@ -607,17 +607,6 @@ video {
 		max-width: 1536px;
 	}
 }
-.sr-only {
-	position: absolute;
-	width: 1px;
-	height: 1px;
-	padding: 0;
-	margin: -1px;
-	overflow: hidden;
-	clip: rect(0, 0, 0, 0);
-	white-space: nowrap;
-	border-width: 0;
-}
 .fixed {
 	position: fixed;
 }
@@ -639,8 +628,14 @@ video {
 .top-0 {
 	top: 0px;
 }
+.left-0 {
+	left: 0px;
+}
 .z-10 {
 	z-index: 10;
+}
+.z-50 {
+	z-index: 50;
 }
 .ml-1 {
 	margin-left: 0.25rem;
@@ -735,6 +730,9 @@ video {
 .h-\[100px\] {
 	height: 100px;
 }
+.h-96 {
+	height: 24rem;
+}
 .h-\[950px\] {
 	height: 950px;
 }
@@ -768,8 +766,11 @@ video {
 .h-48 {
 	height: 12rem;
 }
-.h-96 {
-	height: 24rem;
+.h-10 {
+	height: 2.5rem;
+}
+.h-screen {
+	height: 100vh;
 }
 .w-\[25px\] {
 	width: 25px;
@@ -797,6 +798,15 @@ video {
 }
 .w-\[700px\] {
 	width: 700px;
+}
+.w-96 {
+	width: 24rem;
+}
+.w-16 {
+	width: 4rem;
+}
+.w-\[200px\] {
+	width: 200px;
 }
 .w-full {
 	width: 100%;
@@ -834,9 +844,6 @@ video {
 .w-80 {
 	width: 20rem;
 }
-.w-16 {
-	width: 4rem;
-}
 .w-7 {
 	width: 1.75rem;
 }
@@ -867,20 +874,41 @@ video {
 .w-\[500px\] {
 	width: 500px;
 }
-.w-96 {
-	width: 24rem;
+.w-9 {
+	width: 2.25rem;
 }
-.w-\[130px\] {
-	width: 130px;
+.w-10 {
+	width: 2.5rem;
 }
-.w-\[200px\] {
-	width: 200px;
+.w-\[1800px\] {
+	width: 1800px;
 }
-.w-4 {
-	width: 1rem;
+.w-\[2000px\] {
+	width: 2000px;
 }
-.w-20 {
-	width: 5rem;
+.w-\[1400px\] {
+	width: 1400px;
+}
+.w-\[1600px\] {
+	width: 1600px;
+}
+.w-\[1900px\] {
+	width: 1900px;
+}
+.w-\[1850px\] {
+	width: 1850px;
+}
+.w-\[1820px\] {
+	width: 1820px;
+}
+.w-\[1825px\] {
+	width: 1825px;
+}
+.w-\[1828px\] {
+	width: 1828px;
+}
+.w-\[1835px\] {
+	width: 1835px;
 }
 .min-w-\[208px\] {
 	min-width: 208px;
@@ -896,6 +924,27 @@ video {
 }
 .min-w-\[961px\] {
 	min-width: 961px;
+}
+.min-w-\[1600px\] {
+	min-width: 1600px;
+}
+.min-w-\[1900px\] {
+	min-width: 1900px;
+}
+.min-w-\[1850px\] {
+	min-width: 1850px;
+}
+.min-w-\[1820px\] {
+	min-width: 1820px;
+}
+.min-w-\[1825px\] {
+	min-width: 1825px;
+}
+.min-w-\[1828px\] {
+	min-width: 1828px;
+}
+.min-w-\[1835px\] {
+	min-width: 1835px;
 }
 .max-w-\[380px\] {
 	max-width: 380px;
@@ -934,6 +983,9 @@ video {
 }
 .cursor-pointer {
 	cursor: pointer;
+}
+.resize {
+	resize: both;
 }
 .flex-row-reverse {
 	flex-direction: row-reverse;
@@ -980,6 +1032,9 @@ video {
 .rounded-md {
 	border-radius: 0.375rem;
 }
+.rounded-sm {
+	border-radius: 0.125rem;
+}
 .rounded-2xl {
 	border-radius: 1rem;
 }
@@ -991,9 +1046,6 @@ video {
 }
 .rounded-\[15px\] {
 	border-radius: 15px;
-}
-.rounded-sm {
-	border-radius: 0.125rem;
 }
 .rounded-tl-3xl {
 	border-top-left-radius: 1.5rem;
@@ -1277,6 +1329,18 @@ video {
 .text-\[33px\] {
 	font-size: 33px;
 }
+.text-\[40px\] {
+	font-size: 40px;
+}
+.text-\[60px\] {
+	font-size: 60px;
+}
+.text-\[80px\] {
+	font-size: 80px;
+}
+.text-\[30px\] {
+	font-size: 30px;
+}
 .text-gray-700 {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
@@ -1311,6 +1375,18 @@ video {
 }
 .text-transparent {
 	color: transparent;
+}
+.text-gray-100 {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
+}
+.text-gray-200 {
+	--tw-text-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
+.text-gray-300 {
+	--tw-text-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 .opacity-20 {
 	opacity: 0.2;
