--- a/public/views/navbar.ejs
+++ b/public/views/navbar.ejs
@@ -17,7 +17,8 @@
       <i class="fas fa-bell text-lg  p-4 text-[#c086c5] border-2 shadow-md rounded-[300px] bg-purple-200 duration-100"></i>
       <i class="fas fa-user text-lg  p-4 text-[#a7a7aa]  "></i>
       <i class="fas fa-comments text-lg  p-4 text-[#a7a7aa] "></i>
-      <i class="fas fa-user-friends text-lg  p-4 text-[#a7a7aa]"></i>
+      
+      <i class="far fa-calendar-alt text-[20px]  p-4 text-[#a7a7aa]"></i>
       <i class="fas fa-cog  mt-[600px] text-lg  p-4 text-[#a7a7aa]"></i>
       <div class="relative">
         <img src="asset/user0.png" class=" shadow-lg w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-lg ">
