--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -14,8 +14,8 @@
   <div class="modal  flex absolute z-10  w-full   h-[950px] justify-center items-center " >
     <div class="flex items-center justify-center w-full bg-white h-80 bg-opacity-80"><p class="text-[50px] font-neom text-gray-700  ">회원가입 완료</p></div>
   </div>
-  <div     class="w-full h-[950px] flex justify-center items-center   bg-purple-200 bg-opacity-80">
-    <div class="flex w-[1300px] h-[730px]   rounded-3xl shadow1">
+  <div     class="w-full h-[950px] flex justify-center items-center   bg-purple-200 bg-opacity-80 ">
+    <div class="flex w-[1300px] h-[730px]   rounded-3xl shadow1 z-50">
       <div class="w-[900px] h-[730px] p-28 pl-36 rounded-tl-3xl rounded-bl-3xl bg-white ">
 
         <p class="font-neoeb text-[28px] pb-5">회원가입</p>
@@ -38,11 +38,20 @@
     </div>
   </div>
 
-
-  <!-- <div class=" w-[400px] h-[650px] rounded-2xl shadow-xl bg-white"></div> -->
+  <div id="particles-js" class="absolute top-0 left-0 w-full h-screen"></div>
+ 
 
 
   <script type="module" src="/js/register.js"></script>
+  <script src="/js/particles.min.js"></script>
+  <script>
+    window.addEventListener('load', function() {
+      /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
+      particlesJS.load('particles-js', 'asset/json/1-config.json', function() {
+        console.log('callback - particles.js config loaded');
+      });
+    })
+  </script>
 </body>
 
 </html>
