--- a/public/css/index.css
+++ b/public/css/index.css
@@ -568,11 +568,29 @@ video {
 }
 
 *, ::before, ::after {
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 	--tw-shadow: 0 0 #0000;
+	--tw-blur: var(--tw-empty,/*!*/ /*!*/);
+	--tw-brightness: var(--tw-empty,/*!*/ /*!*/);
+	--tw-contrast: var(--tw-empty,/*!*/ /*!*/);
+	--tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
+	--tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-invert: var(--tw-empty,/*!*/ /*!*/);
+	--tw-saturate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-sepia: var(--tw-empty,/*!*/ /*!*/);
+	--tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
+	--tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .container {
 	width: 100%;
@@ -703,6 +721,30 @@ video {
 .mt-28 {
 	margin-top: 7rem;
 }
+.ml-40 {
+	margin-left: 10rem;
+}
+.ml-36 {
+	margin-left: 9rem;
+}
+.mt-3 {
+	margin-top: 0.75rem;
+}
+.mr-5 {
+	margin-right: 1.25rem;
+}
+.mt-12 {
+	margin-top: 3rem;
+}
+.mt-6 {
+	margin-top: 1.5rem;
+}
+.mr-3 {
+	margin-right: 0.75rem;
+}
+.mr-4 {
+	margin-right: 1rem;
+}
 .block {
 	display: block;
 }
@@ -730,6 +772,9 @@ video {
 .h-\[100px\] {
 	height: 100px;
 }
+.h-\[100vh\] {
+	height: 100vh;
+}
 .h-96 {
 	height: 24rem;
 }
@@ -745,11 +790,11 @@ video {
 .h-\[50px\] {
 	height: 50px;
 }
+.h-screen {
+	height: 100vh;
+}
 .h-\[650px\] {
 	height: 650px;
-}
-.h-\[100vh\] {
-	height: 100vh;
 }
 .h-\[790px\] {
 	height: 790px;
@@ -766,11 +811,32 @@ video {
 .h-48 {
 	height: 12rem;
 }
-.h-10 {
-	height: 2.5rem;
+.h-full {
+	height: 100%;
 }
-.h-screen {
-	height: 100vh;
+.h-\[1000px\] {
+	height: 1000px;
+}
+.h-\[1500px\] {
+	height: 1500px;
+}
+.h-6 {
+	height: 1.5rem;
+}
+.h-14 {
+	height: 3.5rem;
+}
+.h-\[36px\] {
+	height: 36px;
+}
+.h-\[40px\] {
+	height: 40px;
+}
+.h-\[35px\] {
+	height: 35px;
+}
+.h-72 {
+	height: 18rem;
 }
 .w-\[25px\] {
 	width: 25px;
@@ -798,6 +864,12 @@ video {
 }
 .w-\[700px\] {
 	width: 700px;
+}
+.w-\[100vw\] {
+	width: 100vw;
+}
+.w-\[1835px\] {
+	width: 1835px;
 }
 .w-96 {
 	width: 24rem;
@@ -828,9 +900,6 @@ video {
 }
 .w-\[400px\] {
 	width: 400px;
-}
-.w-\[100vw\] {
-	width: 100vw;
 }
 .w-\[208px\] {
 	width: 208px;
@@ -874,41 +943,17 @@ video {
 .w-\[500px\] {
 	width: 500px;
 }
-.w-9 {
-	width: 2.25rem;
+.w-\[250px\] {
+	width: 250px;
 }
-.w-10 {
-	width: 2.5rem;
+.w-\[330px\] {
+	width: 330px;
 }
-.w-\[1800px\] {
-	width: 1800px;
+.w-\[313px\] {
+	width: 313px;
 }
-.w-\[2000px\] {
-	width: 2000px;
-}
-.w-\[1400px\] {
-	width: 1400px;
-}
-.w-\[1600px\] {
-	width: 1600px;
-}
-.w-\[1900px\] {
-	width: 1900px;
-}
-.w-\[1850px\] {
-	width: 1850px;
-}
-.w-\[1820px\] {
-	width: 1820px;
-}
-.w-\[1825px\] {
-	width: 1825px;
-}
-.w-\[1828px\] {
-	width: 1828px;
-}
-.w-\[1835px\] {
-	width: 1835px;
+.min-w-\[1835px\] {
+	min-width: 1835px;
 }
 .min-w-\[208px\] {
 	min-width: 208px;
@@ -925,29 +970,11 @@ video {
 .min-w-\[961px\] {
 	min-width: 961px;
 }
-.min-w-\[1600px\] {
-	min-width: 1600px;
-}
-.min-w-\[1900px\] {
-	min-width: 1900px;
-}
-.min-w-\[1850px\] {
-	min-width: 1850px;
-}
-.min-w-\[1820px\] {
-	min-width: 1820px;
-}
-.min-w-\[1825px\] {
-	min-width: 1825px;
-}
-.min-w-\[1828px\] {
-	min-width: 1828px;
-}
-.min-w-\[1835px\] {
-	min-width: 1835px;
-}
 .max-w-\[380px\] {
 	max-width: 380px;
+}
+.transform {
+	transform: var(--tw-transform);
 }
 @-webkit-keyframes bounce {
 
@@ -1160,6 +1187,30 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(242, 239, 235, var(--tw-bg-opacity));
 }
+.bg-black {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+.bg-yellow-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
+}
+.bg-yellow-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
+}
+.bg-gray-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+.bg-purple-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
+}
+.bg-purple-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+}
 .bg-opacity-40 {
 	--tw-bg-opacity: 0.4;
 }
@@ -1171,6 +1222,9 @@ video {
 }
 .bg-opacity-60 {
 	--tw-bg-opacity: 0.6;
+}
+.bg-opacity-25 {
+	--tw-bg-opacity: 0.25;
 }
 .bg-gradient-to-b {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -1191,14 +1245,23 @@ video {
 .p-4 {
 	padding: 1rem;
 }
-.p-28 {
-	padding: 7rem;
-}
 .p-1 {
 	padding: 0.25rem;
 }
+.p-28 {
+	padding: 7rem;
+}
 .p-3 {
 	padding: 0.75rem;
+}
+.p-5 {
+	padding: 1.25rem;
+}
+.p-6 {
+	padding: 1.5rem;
+}
+.p-8 {
+	padding: 2rem;
 }
 .pl-1 {
 	padding-left: 0.25rem;
@@ -1263,6 +1326,30 @@ video {
 .pt-2 {
 	padding-top: 0.5rem;
 }
+.pl-4 {
+	padding-left: 1rem;
+}
+.pr-4 {
+	padding-right: 1rem;
+}
+.pl-10 {
+	padding-left: 2.5rem;
+}
+.pr-10 {
+	padding-right: 2.5rem;
+}
+.pl-14 {
+	padding-left: 3.5rem;
+}
+.pr-14 {
+	padding-right: 3.5rem;
+}
+.pl-\[60px\] {
+	padding-left: 60px;
+}
+.pr-\[60px\] {
+	padding-right: 60px;
+}
 .text-center {
 	text-align: center;
 }
@@ -1280,6 +1367,9 @@ video {
 }
 .font-neoeb {
 	font-family: NeoEB;
+}
+.font-neol {
+	font-family: NeoL;
 }
 .text-\[12px\] {
 	font-size: 12px;
@@ -1316,12 +1406,12 @@ video {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+.text-\[20px\] {
+	font-size: 20px;
+}
 .text-base {
 	font-size: 1rem;
 	line-height: 1.5rem;
-}
-.text-\[20px\] {
-	font-size: 20px;
 }
 .text-\[50px\] {
 	font-size: 50px;
@@ -1329,17 +1419,17 @@ video {
 .text-\[33px\] {
 	font-size: 33px;
 }
-.text-\[40px\] {
-	font-size: 40px;
-}
-.text-\[60px\] {
-	font-size: 60px;
-}
-.text-\[80px\] {
-	font-size: 80px;
-}
 .text-\[30px\] {
 	font-size: 30px;
+}
+.text-\[25px\] {
+	font-size: 25px;
+}
+.text-\[1px\] {
+	font-size: 1px;
+}
+.text-\[17px\] {
+	font-size: 17px;
 }
 .text-gray-700 {
 	--tw-text-opacity: 1;
@@ -1365,6 +1455,10 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
+.text-gray-300 {
+	--tw-text-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
 .text-gray-400 {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
@@ -1375,18 +1469,6 @@ video {
 }
 .text-transparent {
 	color: transparent;
-}
-.text-gray-100 {
-	--tw-text-opacity: 1;
-	color: rgba(243, 244, 246, var(--tw-text-opacity));
-}
-.text-gray-200 {
-	--tw-text-opacity: 1;
-	color: rgba(229, 231, 235, var(--tw-text-opacity));
-}
-.text-gray-300 {
-	--tw-text-opacity: 1;
-	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 .opacity-20 {
 	opacity: 0.2;
@@ -1405,6 +1487,17 @@ video {
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.drop-shadow {
+	--tw-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));
+	filter: var(--tw-filter);
+}
+.filter {
+	filter: var(--tw-filter);
 }
 .duration-500 {
 	transition-duration: 500ms;
