--- a/public/views/oneToOneChat.ejs
+++ b/public/views/oneToOneChat.ejs
@@ -21,7 +21,7 @@
     <p class="mt-1 ml-1 text-xl font-neoeb">전체</p>
     <div class="user-chat-list"></div>
   </div>
-  <div class=" w-[960px] min-w-[961px] p-2 ml-2 border rounded-lg shadow-md bg-white">
+  <div class=" w-[978px] min-w-[961px] p-2 ml-2 border rounded-lg shadow-md bg-white">
     <p class="mt-1 ml-1 text-xl chat-title font-neoeb">채팅방</p>
     <div class="mb-2 overflow-x-hidden overflow-y-scroll display-container custom-scroll">
       <img src="asset/4.png" alt="" class="fixed w-[900px] mt-36 ml-10">
@@ -31,7 +31,7 @@
      
    
   </div>
-
+  <%-include('rightContent')%>
 </div>
 </div>
 <script src="/socket.io/socket.io.js"></script>
