--- a/public/css/index.css
+++ b/public/css/index.css
@@ -592,39 +592,6 @@ video {
 	--tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
 	--tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
-.container {
-	width: 100%;
-}
-@media (min-width: 640px) {
-
-	.container {
-		max-width: 640px;
-	}
-}
-@media (min-width: 768px) {
-
-	.container {
-		max-width: 768px;
-	}
-}
-@media (min-width: 1024px) {
-
-	.container {
-		max-width: 1024px;
-	}
-}
-@media (min-width: 1280px) {
-
-	.container {
-		max-width: 1280px;
-	}
-}
-@media (min-width: 1536px) {
-
-	.container {
-		max-width: 1536px;
-	}
-}
 .fixed {
 	position: fixed;
 }
@@ -639,9 +606,6 @@ video {
 }
 .left-\[18px\] {
 	left: 18px;
-}
-.top-\[0\] {
-	top: 0;
 }
 .top-0 {
 	top: 0px;
@@ -673,6 +637,18 @@ video {
 .ml-2 {
 	margin-left: 0.5rem;
 }
+.ml-36 {
+	margin-left: 9rem;
+}
+.mt-3 {
+	margin-top: 0.75rem;
+}
+.mt-6 {
+	margin-top: 1.5rem;
+}
+.mr-2 {
+	margin-right: 0.5rem;
+}
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
@@ -697,9 +673,6 @@ video {
 .mt-2 {
 	margin-top: 0.5rem;
 }
-.mr-2 {
-	margin-right: 0.5rem;
-}
 .ml-14 {
 	margin-left: 3.5rem;
 }
@@ -721,32 +694,17 @@ video {
 .mt-28 {
 	margin-top: 7rem;
 }
-.ml-40 {
-	margin-left: 10rem;
+.mt-10 {
+	margin-top: 2.5rem;
 }
-.ml-36 {
-	margin-left: 9rem;
+.mt-8 {
+	margin-top: 2rem;
 }
-.mt-3 {
-	margin-top: 0.75rem;
+.mt-7 {
+	margin-top: 1.75rem;
 }
-.mr-5 {
-	margin-right: 1.25rem;
-}
-.mt-12 {
-	margin-top: 3rem;
-}
-.mt-6 {
-	margin-top: 1.5rem;
-}
-.mr-3 {
-	margin-right: 0.75rem;
-}
-.mr-4 {
-	margin-right: 1rem;
-}
-.block {
-	display: block;
+.mt-11 {
+	margin-top: 2.75rem;
 }
 .flex {
 	display: flex;
@@ -769,14 +727,17 @@ video {
 .h-\[80px\] {
 	height: 80px;
 }
-.h-\[100px\] {
-	height: 100px;
-}
 .h-\[100vh\] {
 	height: 100vh;
 }
-.h-96 {
-	height: 24rem;
+.h-screen {
+	height: 100vh;
+}
+.h-80 {
+	height: 20rem;
+}
+.h-\[35px\] {
+	height: 35px;
 }
 .h-\[950px\] {
 	height: 950px;
@@ -790,9 +751,6 @@ video {
 .h-\[50px\] {
 	height: 50px;
 }
-.h-screen {
-	height: 100vh;
-}
 .h-\[650px\] {
 	height: 650px;
 }
@@ -805,38 +763,8 @@ video {
 .h-\[200px\] {
 	height: 200px;
 }
-.h-80 {
-	height: 20rem;
-}
 .h-48 {
 	height: 12rem;
-}
-.h-full {
-	height: 100%;
-}
-.h-\[1000px\] {
-	height: 1000px;
-}
-.h-\[1500px\] {
-	height: 1500px;
-}
-.h-6 {
-	height: 1.5rem;
-}
-.h-14 {
-	height: 3.5rem;
-}
-.h-\[36px\] {
-	height: 36px;
-}
-.h-\[40px\] {
-	height: 40px;
-}
-.h-\[35px\] {
-	height: 35px;
-}
-.h-72 {
-	height: 18rem;
 }
 .w-\[25px\] {
 	width: 25px;
@@ -862,14 +790,14 @@ video {
 .w-\[100px\] {
 	width: 100px;
 }
-.w-\[700px\] {
-	width: 700px;
-}
 .w-\[100vw\] {
 	width: 100vw;
 }
 .w-\[1835px\] {
 	width: 1835px;
+}
+.w-full {
+	width: 100%;
 }
 .w-96 {
 	width: 24rem;
@@ -877,11 +805,8 @@ video {
 .w-16 {
 	width: 4rem;
 }
-.w-\[200px\] {
-	width: 200px;
-}
-.w-full {
-	width: 100%;
+.w-\[250px\] {
+	width: 250px;
 }
 .w-\[1300px\] {
 	width: 1300px;
@@ -940,17 +865,29 @@ video {
 .w-\[550px\] {
 	width: 550px;
 }
-.w-\[500px\] {
-	width: 500px;
+.w-44 {
+	width: 11rem;
 }
-.w-\[250px\] {
-	width: 250px;
+.w-56 {
+	width: 14rem;
 }
-.w-\[330px\] {
-	width: 330px;
+.w-72 {
+	width: 18rem;
 }
-.w-\[313px\] {
-	width: 313px;
+.w-\[970px\] {
+	width: 970px;
+}
+.w-\[978px\] {
+	width: 978px;
+}
+.w-\[1400px\] {
+	width: 1400px;
+}
+.w-\[1320px\] {
+	width: 1320px;
+}
+.w-32 {
+	width: 8rem;
 }
 .min-w-\[1835px\] {
 	min-width: 1835px;
@@ -970,10 +907,37 @@ video {
 .min-w-\[961px\] {
 	min-width: 961px;
 }
+.min-w-\[1400px\] {
+	min-width: 1400px;
+}
+.min-w-\[1350px\] {
+	min-width: 1350px;
+}
 .max-w-\[380px\] {
 	max-width: 380px;
 }
-.transform {
+.rotate-2 {
+	--tw-rotate: 2deg;
+	transform: var(--tw-transform);
+}
+.rotate-90 {
+	--tw-rotate: 90deg;
+	transform: var(--tw-transform);
+}
+.rotate-45 {
+	--tw-rotate: 45deg;
+	transform: var(--tw-transform);
+}
+.-rotate-6 {
+	--tw-rotate: -6deg;
+	transform: var(--tw-transform);
+}
+.-rotate-2 {
+	--tw-rotate: -2deg;
+	transform: var(--tw-transform);
+}
+.rotate-6 {
+	--tw-rotate: 6deg;
 	transform: var(--tw-transform);
 }
 @-webkit-keyframes bounce {
@@ -1026,9 +990,6 @@ video {
 .items-center {
 	align-items: center;
 }
-.justify-end {
-	justify-content: flex-end;
-}
 .justify-center {
 	justify-content: center;
 }
@@ -1059,6 +1020,9 @@ video {
 .rounded-md {
 	border-radius: 0.375rem;
 }
+.rounded-xl {
+	border-radius: 0.75rem;
+}
 .rounded-sm {
 	border-radius: 0.125rem;
 }
@@ -1067,9 +1031,6 @@ video {
 }
 .rounded-full {
 	border-radius: 9999px;
-}
-.rounded-xl {
-	border-radius: 0.75rem;
 }
 .rounded-\[15px\] {
 	border-radius: 15px;
@@ -1135,6 +1096,14 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
 }
+.bg-black {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+.bg-purple-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+}
 .bg-green-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
@@ -1187,29 +1156,17 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(242, 239, 235, var(--tw-bg-opacity));
 }
-.bg-black {
-	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-.bg-yellow-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
-}
-.bg-yellow-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
-}
 .bg-gray-300 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
-.bg-purple-400 {
+.bg-blue-300 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
+	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
 }
-.bg-purple-600 {
+.bg-blue-100 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 .bg-opacity-40 {
 	--tw-bg-opacity: 0.4;
@@ -1217,14 +1174,14 @@ video {
 .bg-opacity-80 {
 	--tw-bg-opacity: 0.8;
 }
+.bg-opacity-25 {
+	--tw-bg-opacity: 0.25;
+}
 .bg-opacity-50 {
 	--tw-bg-opacity: 0.5;
 }
 .bg-opacity-60 {
 	--tw-bg-opacity: 0.6;
-}
-.bg-opacity-25 {
-	--tw-bg-opacity: 0.25;
 }
 .bg-gradient-to-b {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -1248,20 +1205,14 @@ video {
 .p-1 {
 	padding: 0.25rem;
 }
+.p-8 {
+	padding: 2rem;
+}
 .p-28 {
 	padding: 7rem;
 }
 .p-3 {
 	padding: 0.75rem;
-}
-.p-5 {
-	padding: 1.25rem;
-}
-.p-6 {
-	padding: 1.5rem;
-}
-.p-8 {
-	padding: 2rem;
 }
 .pl-1 {
 	padding-left: 0.25rem;
@@ -1293,6 +1244,18 @@ video {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
+.pt-2 {
+	padding-top: 0.5rem;
+}
+.pb-2 {
+	padding-bottom: 0.5rem;
+}
+.pl-\[60px\] {
+	padding-left: 60px;
+}
+.pr-\[60px\] {
+	padding-right: 60px;
+}
 .pl-36 {
 	padding-left: 9rem;
 }
@@ -1317,38 +1280,8 @@ video {
 .pb-\[6px\] {
 	padding-bottom: 6px;
 }
-.pb-2 {
-	padding-bottom: 0.5rem;
-}
 .pl-3 {
 	padding-left: 0.75rem;
-}
-.pt-2 {
-	padding-top: 0.5rem;
-}
-.pl-4 {
-	padding-left: 1rem;
-}
-.pr-4 {
-	padding-right: 1rem;
-}
-.pl-10 {
-	padding-left: 2.5rem;
-}
-.pr-10 {
-	padding-right: 2.5rem;
-}
-.pl-14 {
-	padding-left: 3.5rem;
-}
-.pr-14 {
-	padding-right: 3.5rem;
-}
-.pl-\[60px\] {
-	padding-left: 60px;
-}
-.pr-\[60px\] {
-	padding-right: 60px;
 }
 .text-center {
 	text-align: center;
@@ -1367,9 +1300,6 @@ video {
 }
 .font-neoeb {
 	font-family: NeoEB;
-}
-.font-neol {
-	font-family: NeoL;
 }
 .text-\[12px\] {
 	font-size: 12px;
@@ -1391,6 +1321,12 @@ video {
 }
 .text-\[15px\] {
 	font-size: 15px;
+}
+.text-\[25px\] {
+	font-size: 25px;
+}
+.text-\[17px\] {
+	font-size: 17px;
 }
 .text-\[28px\] {
 	font-size: 28px;
@@ -1418,18 +1354,6 @@ video {
 }
 .text-\[33px\] {
 	font-size: 33px;
-}
-.text-\[30px\] {
-	font-size: 30px;
-}
-.text-\[25px\] {
-	font-size: 25px;
-}
-.text-\[1px\] {
-	font-size: 1px;
-}
-.text-\[17px\] {
-	font-size: 17px;
 }
 .text-gray-700 {
 	--tw-text-opacity: 1;
@@ -1480,6 +1404,10 @@ video {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-xl {
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1487,14 +1415,6 @@ video {
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow {
-	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.drop-shadow {
-	--tw-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));
-	filter: var(--tw-filter);
 }
 .filter {
 	filter: var(--tw-filter);
